Fixed text clipping issue for mark as done button on smaller screen

--- a/src/my-chores/my-chores.css
+++ b/src/my-chores/my-chores.css
@@ -16,12 +16,32 @@
   margin: 1vh 3vw;
   justify-content: space-between;
   text-align: left;
+  align-items: center;
 }
 .done-btn {
   border-color: black;
   border-width: 2px;
   width: 20%;
   background-color: rgb(20, 119, 20);
-  font-size: 20px;
+  font-size: 25px;
   color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .done-btn{
+    width: 30%;
+    font-size: 15px;
+  }
+  .chores{
+    width: 100%;
+  }
+}
+@media screen and (max-width: 350px) {
+  .chores{
+    width: 100%;
+    flex-direction: column;
+  }
+  .done-btn,.chore-info{
+    width: 100%;
+  }
 }
